Regression: Blender crashes after using Inset Faces #104501

Closed
opened 2023-02-09 10:54:34 +01:00 by Sergey · 7 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-06 01:50, hash: rB2627635ff3ae

Caused by 6c774feba2

Short description of error
Blender crashes after using Inset Faces (when a UV map is present)

Exact steps for others to reproduce the error
1 - create poly sphere
2 - select several polygons
3 - use Inset Faces (with the settings as in the screenshot)
Sometimes after this operation Blender crashes

in a debug build with ASAN, this will reliably give

SUMMARY: AddressSanitizer: heap-buffer-overflow /blender/source/blender/bmesh/intern/bmesh_mesh_convert.cc:1030 in BM_mesh_bm_to_me

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-06 01:50, hash: `rB2627635ff3ae` Caused by 6c774feba2 **Short description of error** Blender crashes after using Inset Faces (when a UV map is present) **Exact steps for others to reproduce the error** 1 - create poly sphere 2 - select several polygons 3 - use Inset Faces (with the settings as in the screenshot) Sometimes after this operation Blender crashes in a debug build with ASAN, this will reliably give `SUMMARY: AddressSanitizer: heap-buffer-overflow /blender/source/blender/bmesh/intern/bmesh_mesh_convert.cc:1030 in BM_mesh_bm_to_me`
Sergey added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-09 10:54:34 +01:00

Seems as duplicate of #104344

Seems as duplicate of https://projects.blender.org/blender/blender/issues/104344
Member

Hi, thanks for the report.

Seems as duplicate of #104344

That could be a platform specific issue.
@borschberry , I'm not able to redo the crash locally.
Can you share crash logs?

Please open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to reproduce the
error again. Once it crashes or you close Blender manually the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them
to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).2019_12_04_upload_icon_developer_blender_org.png

Could you also try factory reset?: File > Defaults > Load Factory Settings

Hi, thanks for the report. > Seems as duplicate of https://projects.blender.org/blender/blender/issues/104344 That could be a platform specific issue. @borschberry , I'm not able to redo the crash locally. Can you share crash logs? > Please open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to reproduce the error again. Once it crashes or you close Blender manually the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer).![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png) Could you also try factory reset?: File > Defaults > Load Factory Settings
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-02-09 16:22:50 +01:00
Author

I did as you wrote. I hope this helps

I did as you wrote. I hope this helps
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-02-09 19:05:26 +01:00
Pratik Borhade added this to the Modeling project 2023-02-09 19:05:32 +01:00
Member

Hi, managed to trigger the crash in debug build (Still unable to redo crash in release build), confirming.

>	blender.exe!BM_mesh_bm_to_me(Main * bmain, BMesh * bm, Mesh * me, const BMeshToMeshParams * params) Line 1041	C++
 	blender.exe!undomesh_from_editmesh(UndoMesh * um, BMEditMesh * em, Key * key, UndoMesh * um_ref) Line 615	C++
 	blender.exe!mesh_undosys_step_encode(bContext * C, Main * bmain, UndoStep * us_p) Line 805	C++
 	blender.exe!undosys_step_encode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us) Line 146	C++
 	blender.exe!BKE_undosys_step_push_with_type(UndoStack * ustack, bContext * C, const char * name, const UndoType * ut) Line 555	C++
 	blender.exe!BKE_undosys_step_push(UndoStack * ustack, bContext * C, const char * name) Line 601	C++
 	blender.exe!ED_undo_push(bContext * C, const char * str) Line 138	C++
 	blender.exe!ED_undo_push_op(bContext * C, wmOperator * op) Line 405	C++
 	blender.exe!wm_operator_finished(bContext * C, wmOperator * op, const bool repeat, const bool store, const bool has_undo_step, const bool has_register) Line 1134	C++
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Line 2487	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3364	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3414	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Line 4009	C++
 	blender.exe!WM_main(bContext * C) Line 644	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 589	C
Hi, managed to trigger the crash in debug build (Still unable to redo crash in release build), confirming. ``` > blender.exe!BM_mesh_bm_to_me(Main * bmain, BMesh * bm, Mesh * me, const BMeshToMeshParams * params) Line 1041 C++ blender.exe!undomesh_from_editmesh(UndoMesh * um, BMEditMesh * em, Key * key, UndoMesh * um_ref) Line 615 C++ blender.exe!mesh_undosys_step_encode(bContext * C, Main * bmain, UndoStep * us_p) Line 805 C++ blender.exe!undosys_step_encode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us) Line 146 C++ blender.exe!BKE_undosys_step_push_with_type(UndoStack * ustack, bContext * C, const char * name, const UndoType * ut) Line 555 C++ blender.exe!BKE_undosys_step_push(UndoStack * ustack, bContext * C, const char * name) Line 601 C++ blender.exe!ED_undo_push(bContext * C, const char * str) Line 138 C++ blender.exe!ED_undo_push_op(bContext * C, wmOperator * op) Line 405 C++ blender.exe!wm_operator_finished(bContext * C, wmOperator * op, const bool repeat, const bool store, const bool has_undo_step, const bool has_register) Line 1134 C++ blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Line 2487 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3364 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3414 C++ blender.exe!wm_event_do_handlers(bContext * C) Line 4009 C++ blender.exe!WM_main(bContext * C) Line 644 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 589 C ```
Member

Getting this in debug with any Inset (if there is a UV map present)

SUMMARY: AddressSanitizer: heap-buffer-overflow /blender/source/blender/bmesh/intern/bmesh_mesh_convert.cc:1030 in BM_mesh_bm_to_me

suspicion is 6c774feba2, will check

Getting this in debug with any Inset (if there is a UV map present) ``` SUMMARY: AddressSanitizer: heap-buffer-overflow /blender/source/blender/bmesh/intern/bmesh_mesh_convert.cc:1030 in BM_mesh_bm_to_me ``` suspicion is 6c774feba2c9, will check
Member

Indeed caused by 6c774feba2

CC @HooglyBoogly
CC @Baardaap

Indeed caused by 6c774feba2 CC @HooglyBoogly CC @Baardaap
Philipp Oeser changed title from Blender crashes after using Inset Faces to Regression: Blender crashes after using Inset Faces 2023-02-10 14:01:36 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-02-10 14:01:51 +01:00

I'll have a look.

I'll have a look.
Martijn Versteegh self-assigned this 2023-02-10 23:00:22 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 20:08:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104501
No description provided.